--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>京东首页ha1122</title>
+	<title>京东首页ha自己修改的内容</title>
 	<link rel="stylesheet"href="./css/index.css">
 	<script src='./js/jquery-3.2.1.min.js'></script>
 	<script type="text/javascript" src="./js/jquery-1.8.3.js"></script>
